@@ -24,7 +24,7 @@
 		<dependency>
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
-			<version>3.9.0.GA</version>
+			<version>3.10.0.GA</version>
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
